--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 	<groupId>com.books-management</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>books</name>
+    <packaging>jar</packaging>
+    <name>books</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
